# homeassistant-nerdqaxe-addon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  hacs.yml  hassfest.yml  release.yml  stale.yml
custom_components/nerdqaxe/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  manifest.json  number.py  sensor.py  strings.json  update.py
custom_components/nerdqaxe/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_number.py  test_sensor.py  test_update.py
